[gd_scene load_steps=40 format=2]

[ext_resource path="res://character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://art/Sprites/hero/hero-jump/hero-jump-4.png" type="Texture" id=2]
[ext_resource path="res://character/animation_handler/player_animation_handler/player_animation_handler.gd" type="Script" id=3]
[ext_resource path="res://art/Sprites/hero/hero-crouch/hero-crouch.png" type="Texture" id=4]
[ext_resource path="res://art/Sprites/hero/hero-jump/hero-jump-3.png" type="Texture" id=5]
[ext_resource path="res://art/Sprites/hero/hero-hurt/hero-hurt.png" type="Texture" id=6]
[ext_resource path="res://art/Sprites/hero/hero-idle/hero-idle-1.png" type="Texture" id=7]
[ext_resource path="res://art/Sprites/hero/hero-idle/hero-idle-2.png" type="Texture" id=8]
[ext_resource path="res://art/Sprites/hero/hero-idle/hero-idle-3.png" type="Texture" id=9]
[ext_resource path="res://art/Sprites/hero/hero-idle/hero-idle-4.png" type="Texture" id=10]
[ext_resource path="res://art/Sprites/hero/hero-jump/hero-jump-1.png" type="Texture" id=11]
[ext_resource path="res://art/Sprites/hero/hero-jump/hero-jump-2.png" type="Texture" id=12]
[ext_resource path="res://art/Sprites/hero/hero-attack/hero-attack-1.png" type="Texture" id=13]
[ext_resource path="res://art/Sprites/hero/hero-attack/hero-attack-2.png" type="Texture" id=14]
[ext_resource path="res://art/Sprites/hero/hero-attack/hero-attack-3.png" type="Texture" id=15]
[ext_resource path="res://art/Sprites/hero/hero-attack/hero-attack-4.png" type="Texture" id=16]
[ext_resource path="res://art/Sprites/hero/hero-attack/hero-attack-5.png" type="Texture" id=17]
[ext_resource path="res://art/Sprites/hero/hero-run/hero-run-1.png" type="Texture" id=18]
[ext_resource path="res://art/Sprites/hero/hero-run/hero-run-2.png" type="Texture" id=19]
[ext_resource path="res://art/Sprites/hero/hero-run/hero-run-3.png" type="Texture" id=20]
[ext_resource path="res://art/Sprites/hero/hero-run/hero-run-4.png" type="Texture" id=21]
[ext_resource path="res://art/Sprites/hero/hero-run/hero-run-5.png" type="Texture" id=22]
[ext_resource path="res://art/Sprites/hero/hero-run/hero-run-6.png" type="Texture" id=23]
[ext_resource path="res://input_handler/input_communicator/player_input_communicator/player_input_communicator.gd" type="Script" id=24]
[ext_resource path="res://input_handler/player_input_handler.gd" type="Script" id=25]
[ext_resource path="res://character/body_state_machine/player_body/player_body_state_machine.gd" type="Script" id=26]
[ext_resource path="res://character/body_state_machine/motion/on_floor/idle.gd" type="Script" id=27]
[ext_resource path="res://character/body_state_machine/motion/on_floor/move.gd" type="Script" id=28]
[ext_resource path="res://character/body_state_machine/motion/in_air/jump.gd" type="Script" id=29]
[ext_resource path="res://character/body_state_machine/motion/in_air/fall.gd" type="Script" id=30]
[ext_resource path="res://character/body_state_machine/combat/mele_attack.gd" type="Script" id=31]

[sub_resource type="CapsuleShape2D" id=1]
radius = 28.1135

[sub_resource type="Animation" id=3]
resource_name = "crouch"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fall"
length = 1.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 0.999999, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 7 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.9
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "mele_attack"
tracks/0/type = "value"
tracks/0/path = NodePath("../Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -21.7865, -0.711977 ), Vector2( 0, 0 ), Vector2( 16.1521, -1.13916 ), Vector2( 16.1521, -1.13916 ), Vector2( 16.1521, -1.13916 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Weapon/DamageZone/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=9]
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ]
}

[node name="Player" index="0" instance=ExtResource( 1 )]
collision_layer = 2

[node name="Body" parent="." index="0"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="Weapon" type="Position2D" parent="." index="2"]
editor/display_folded = true
position = Vector2( 16.1521, -1.13916 )
__meta__ = {
"_edit_group_": true
}

[node name="DamageZone" type="Area2D" parent="Weapon" index="0"]
collision_layer = 4
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Weapon/DamageZone" index="0"]
polygon = PoolVector2Array( 33.795, 4.73855, 10.0341, -0.495138, -0.433308, -0.495138, -0.433308, 7.66942, 10.4528, 7.66942, 20.6061, 7.66942, 21.2342, 6.51801, 30.6548, 6.72735, 30.9688, 5.57594 )
disabled = true

[node name="AnimationHandler" parent="." index="3"]
script = ExtResource( 3 )

[node name="AnimationPlayer" parent="AnimationHandler" index="0"]
anims/crouch = SubResource( 3 )
anims/fall = SubResource( 4 )
anims/hurt = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/jump = SubResource( 7 )
anims/mele_attack = SubResource( 2 )
anims/move = SubResource( 9 )

[node name="AnimationTime" parent="AnimationHandler" index="1"]
one_shot = true

[node name="PlayerInputCommunicator" type="Node" parent="." index="4"]
script = ExtResource( 24 )

[node name="PlayerInputHandler" type="Node" parent="." index="5"]
script = ExtResource( 25 )

[node name="BodyStateMachine" parent="." index="6"]
script = ExtResource( 26 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="BodyStateMachine" index="0"]
script = ExtResource( 27 )

[node name="Move" type="Node" parent="BodyStateMachine" index="1"]
script = ExtResource( 28 )

[node name="Jump" type="Node" parent="BodyStateMachine" index="2"]
script = ExtResource( 29 )
HIERARCHY = 1

[node name="Fall" type="Node" parent="BodyStateMachine" index="3"]
script = ExtResource( 30 )
HIERARCHY = 1

[node name="MeleAttack" type="Node" parent="BodyStateMachine" index="4"]
script = ExtResource( 31 )
HIERARCHY = 1

[connection signal="animation_finished" from="AnimationHandler" to="BodyStateMachine/MeleAttack" method="_on_AnimationHandler_animation_finished"]
[connection signal="timeout" from="AnimationHandler/AnimationTime" to="AnimationHandler" method="animation_time_out"]
[connection signal="attacked_mele" from="PlayerInputCommunicator" to="BodyStateMachine/Fall" method="exit"]
[connection signal="attacked_mele" from="PlayerInputCommunicator" to="BodyStateMachine/Jump" method="exit"]
[connection signal="attacked_mele" from="PlayerInputCommunicator" to="BodyStateMachine/Move" method="exit"]
[connection signal="attacked_mele" from="PlayerInputCommunicator" to="BodyStateMachine/Idle" method="exit"]
[connection signal="jumped" from="PlayerInputCommunicator" to="BodyStateMachine/Move" method="exit"]
[connection signal="jumped" from="PlayerInputCommunicator" to="BodyStateMachine/Idle" method="exit"]
[connection signal="moved" from="PlayerInputCommunicator" to="." method="update_move_direction"]
[connection signal="got_input" from="PlayerInputHandler" to="PlayerInputCommunicator" method="communicate_input"]
[connection signal="state_entered" from="BodyStateMachine/Idle" to="AnimationHandler" method="play_animation"]
[connection signal="state_entered" from="BodyStateMachine/Move" to="AnimationHandler" method="play_animation"]
[connection signal="state_entered" from="BodyStateMachine/Jump" to="AnimationHandler" method="play_animation"]
[connection signal="state_entered" from="BodyStateMachine/Fall" to="AnimationHandler" method="play_animation"]
[connection signal="state_entered" from="BodyStateMachine/MeleAttack" to="AnimationHandler" method="play_animation"]
